@@ -1,2 +1,2 @@
-prereq: ../../../tests/check_isa-2_07_cap
+prereq: ../../../tests/check_isa-2_07_cap && ! ../../../tests/check_ppc64le_cap
 prog: test_isa_2_07_part1 -a
